--- a/backend/Instagram-Clone/src/main/resources/application.yml
+++ b/backend/Instagram-Clone/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     name: Instagram-Clone
   datasource:
     url: jdbc:postgresql://localhost:5432/instagram
-    username: am1n
-    password: 1234
+    username: postgres
+    password: 1224
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
